--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <title>ZENER Serviço Técnico</title>
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
 <div class="navbar-fixed">
   <nav class="grey lighten-3" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><img alt="" src="../zener_preto.png"></a>
+      <a id="logo-container" href="#" class="brand-logo"><img alt="" src="zener_preto.png"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="../home">Home</a></li>
         <li><a href="../localiza">Localização</a></li>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
   <footer class="page-footer blue darken-1">
     <div class="container">
@@ -142,8 +142,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../js/materialize.js"></script>
-  <script src="../js/init.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 
   </body>
 </html>
