--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Redes Sociais:</h5>
-          			<a href="https://web.facebook.com/zenerservitec"><img src="../face.png"></a>&nbsp&nbsp
-          			<a href="http://www.instagram.com/zenerservitec"><img src="../insta.png"></a>&nbsp&nbsp
-          			<a href="https://www.youtube.com/channel/UCY_xxL9vh6CUw9ws40qv7pQ"><img src="../yutu.png"></a>&nbsp&nbsp
-          			<a href="https://github.com/3du4rd0BM"><img src="../github.png"></a>          			
+          			<a href="https://web.facebook.com/zenerservitec"><img src="face.png"></a>&nbsp&nbsp
+          			<a href="http://www.instagram.com/zenerservitec"><img src="insta.png"></a>&nbsp&nbsp
+          			<a href="https://www.youtube.com/channel/UCY_xxL9vh6CUw9ws40qv7pQ"><img src="yutu.png"></a>&nbsp&nbsp
+          			<a href="https://github.com/3du4rd0BM"><img src="github.png"></a>          			
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Nossas Parcerias:</h5>
           <ul>
-            <li><img src="../METAS CLARA TRANSPARENTE 50h.png"></li>
+            <li><img src="METAS CLARA TRANSPARENTE 50h.png"></li>
           </ul>
         </div>
         <div class="col l3 s12">
