--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo"><img alt="" src="zener_preto.png"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../home">Home</a></li>
+        <li><a href="../">Home</a></li>
         <li><a href="../localiza">Localização</a></li>
         <li><a href="../downloads">Downloads</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
@@ -29,7 +29,7 @@
   </nav>
 </div>
  	  <ul id="nav-mobile" class="sidenav">
-        <li><a href="../home">Home</a></li>
+        <li><a href="../">Home</a></li>
         <li><a href="../localiza">Localização</a></li>
         <li><a href="../downloads">Downloads</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
