--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="../site">Home</a></li>
         <li><a href="../localiza">Localização</a></li>
-        <li><a href="../downloads">Downloads</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="../../moodle">Cursos</a></li>
         <li><a href="../../moodle/login">Alunos</a></li>
@@ -30,8 +29,7 @@
 </div>
  	  <ul id="nav-mobile" class="sidenav">
         <li><a href="../site">Home</a></li>
-        <li><a href="../localiza">Localização</a></li>
-        <li><a href="../downloads">Downloads</a></li>
+        <li><a href="/localiza">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="../../moodle">Cursos</a></li>
         <li><a href="../../moodle/login">Alunos</a></li>
