--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a id="logo-container" href="#" class="brand-logo"><img alt="" src="zener_preto.png"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="../site">Home</a></li>
-        <li><a href="../localiza">Localização</a></li>
+        <li><a href="../site/localiza">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="../../moodle">Cursos</a></li>
         <li><a href="../../moodle/login">Alunos</a></li>
@@ -29,7 +29,7 @@
 </div>
  	  <ul id="nav-mobile" class="sidenav">
         <li><a href="../site">Home</a></li>
-        <li><a href="/localiza">Localização</a></li>
+        <li><a href="../site/localiza">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="../../moodle">Cursos</a></li>
         <li><a href="../../moodle/login">Alunos</a></li>
