--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <li><a href="../site">Home</a></li>
         <li><a href="../site/localiza">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
-        <li><a href="../../moodle">Cursos</a></li>
-        <li><a href="../../moodle/login">Alunos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
     </div>
@@ -31,8 +31,8 @@
         <li><a href="../site">Home</a></li>
         <li><a href="../site/localiza">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
-        <li><a href="../../moodle">Cursos</a></li>
-        <li><a href="../../moodle/login">Alunos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>  <div id="index-banner" class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
