--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo"><img alt="" src="zener_preto.png"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../site">Home</a></li>
-        <li><a href="../site/localiza">Localização</a></li>
+        <li><a href="../site/">Home</a></li>
+        <li><a href="../site/localiza/">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
@@ -28,8 +28,8 @@
   </nav>
 </div>
  	  <ul id="nav-mobile" class="sidenav">
-        <li><a href="../site">Home</a></li>
-        <li><a href="../site/localiza">Localização</a></li>
+        <li><a href="../site/">Home</a></li>
+        <li><a href="../site/localiza/">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
@@ -75,7 +75,7 @@
             <h2 class="black-text"><i class="material-icons">school</i></h2>
             <h5>Treinamento</h5>
             <p class="light">Em parceria com a "METAS cursos livres", oferecemos diversos cursos relacionados com a eletrônica.</p>
-            <a href="/moodle" id="download-button" class="btn-large waves-effect waves-light blue">Visite</a>
+            <a href="http://zenertec.duckdns.org:8008/moodle/" id="download-button" class="btn-large waves-effect waves-light blue">Visite</a>
           </div>
         </div>
       </div>
