--- a/localiza/index.html
+++ b/localiza/index.html
@@ -17,24 +17,22 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo"><img alt="" src="../zener_preto.png"></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../home">Home</a></li>
-        <li><a href="../localiza">Localização</a></li>
-        <li><a href="../downloads">Downloads</a></li>
+        <li><a href="../site/">Home</a></li>
+        <li><a href="../site/localiza/">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
-        <li><a href="../../moodle">Cursos</a></li>
-        <li><a href="../../moodle/login">Alunos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
     </div>
   </nav>
 </div>
  	  <ul id="nav-mobile" class="sidenav">
-        <li><a href="../home">Home</a></li>
-        <li><a href="../localiza">Localização</a></li>
-        <li><a href="../downloads">Downloads</a></li>
+        <li><a href="../site/">Home</a></li>
+        <li><a href="../site/localiza/">Localização</a></li>
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
-        <li><a href="../../moodle">Cursos</a></li>
-        <li><a href="../../moodle/login">Alunos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
+        <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>  <div class="container center">
   	<div class="section">
   		<div class="row">
