--- a/embed_test/index.html
+++ b/embed_test/index.html
@@ -35,7 +35,7 @@
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>
   <div class="container center">
-  	<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
+  	<iframe src="http://zenertec.duckdns.org:8008/portal/home/" title="php_online"></iframe>
   </div>
   <footer class="page-footer blue darken-1">
     <div class="container">
