--- a/embed_test/index.html
+++ b/embed_test/index.html
@@ -35,7 +35,7 @@
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>
   <div class="container center">
-  	<iframe src="http://zenertec.duckdns.org:8008/moodle/login/index.php" title="moodle_online"></iframe>
+  	<iframe src="http://zenertec.duckdns.org:8008/moodle/" title="moodle_online"></iframe>
   </div>
   <footer class="page-footer blue darken-1">
     <div class="container">
