--- a/embed_test/index.html
+++ b/embed_test/index.html
@@ -35,7 +35,16 @@
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>
   <div class="container center">
-  	<iframe src="https://3du4rd0bm.github.io/site/" title="inline"></iframe>
+  	<iframe
+      src="https://3du4rd0bm.github.io/site/"
+      title="inline"
+      width="800" 
+      height="600" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade">
+    ></iframe>
   </div>
   <footer class="page-footer blue darken-1">
     <div class="container">
