--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -34,14 +34,10 @@
         <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
       </ul>
-  <div class="container center">
-  	<iframe
-      src="https://3du4rd0bm.github.io/site/"
-      title="inline"
-      width="1200" 
-      height="800" 
-      style="border:0;"
-    ></iframe>
+  <div class="container center gray">
+  	<!--CONTEUDO-->
+
+    <!--CONTEUDO-->
   </div>
   <footer class="page-footer blue darken-1">
     <div class="container">
