--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -33,8 +33,9 @@
         <li><a href="https://zenertec.sualojaonline.app/">Loja</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/">Cursos</a></li>
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
-      </ul>
-  <div class="container center gray">
+    </ul>
+    
+  <div class="container">
   	<!--CONTEUDO-->
     test
     <!--CONTEUDO-->
