--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -38,7 +38,7 @@
   <div class="container">
   	<!--CONTEUDO-->
     <div class="row">
-      <div class="">
+      <div class="card-panel">
 
       </div>
     </div>
