--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -35,14 +35,13 @@
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
     </ul>
 
-  <div class="container">
+  <div class="container blue">
   	<!--CONTEUDO-->
-    <div class="row">
+    <div class="rowcard-panel">
       <div class="card-panel">
 
       </div>
     </div>
-    test
     <!--CONTEUDO-->
   </div>
   <footer class="page-footer blue darken-1">
