--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -35,9 +35,9 @@
         <li><a href="http://zenertec.duckdns.org:8008/moodle/login/">Alunos</a></li>
     </ul>
 
-  <div class="container blue">
+  <div class="container">
   	<!--CONTEUDO-->
-    <div class="row card-panel">
+    <div class="row">
       <div class="card-panel">
         <h1>Testador de sensores automotivos</h1>
         <p>
