--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -43,6 +43,7 @@
         <p>
           Este projeto se resume a um voltimetro de 3 escalas, como no segmento automotriz é necessário acompanhar o comportamento, o mesmo possui um um vu-meter de leds que são acionados de: 0-1v ; 0-5v ; 0-15v.
         </p>
+        <img class="" src="LM3914.jpg">
       </div>
     </div>
     <!--CONTEUDO-->
