--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -43,7 +43,10 @@
         <p>
           Este projeto se resume a um voltimetro de 3 escalas, como no segmento automotriz é necessário acompanhar o comportamento, o mesmo possui um um vu-meter de leds que são acionados de: 0-1v ; 0-5v ; 0-15v.
         </p>
-        <img class="" src="LM3914.jpg">
+        <img class="responsive-img" src="LM3914.jpg">
+        <p>
+          No imagem acima podemos ver que o circuito está basado no LM3914.
+        </p>
       </div>
     </div>
     <!--CONTEUDO-->
