--- a/lambda_tester/index.html
+++ b/lambda_tester/index.html
@@ -41,7 +41,7 @@
       <div class="card-panel">
         <h1>Testador de sensores automotivos</h1>
         <p>
-          Este projeto se resume a um voltimetro de 3 escalas, como no segmento automotriz é necessário acompanhar o comportamento, o mesmo possui um um vu-meter de leds que são acionados de: 0-1v ; 0-5v ; 0-15v.
+          Este projeto se resume a um voltimetro de 3 escalas, como no segmento automotriz é necessário acompanhar o comportamento, o mesmo possui um um vu-meter de leds que são acionados de: 0-1v ; 0-5v ; 0-15v respectivamente.
         </p>
         <img class="responsive-img" src="LM3914.jpg">
         <p>
